--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     forrma simples, prática e objetiva desenvolvendo passo a passo do 
     zero até a hospedagem um site one page moderno e responsivo.">
     <link rel="icon" href="img/favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
