--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +12,24 @@
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Cabeçalho -->
-    <header>
-        <div class="Container">
-
+    <header id="inicio">
+        <div class="Container Flex">
+            <div class="logo">
+                <img src="img/logo.png" alt="hal 9000">
+            </div>
+            <nav>
+                <input type="checkbox" id="check">
+                <label for="check">&#x268c;</label>
+                <ul>
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#conteudo">Conteúdo</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
 
         </div>
     </header>
@@ -27,7 +41,7 @@
         </div>
     </main>
     <!-- Sobre -->
-    <section>
+    <section id="sobre">
         <div class="Container">
             <h2>Aprender na prática</h2>
         </div>
@@ -45,7 +59,7 @@
         </div>
     </section>
     <!-- Conteúdo -->
-    <section>
+    <section id="conteudo">
         <div class="Container">
             <h2>Conteúdo</h2>
             <H3>HTML5</H3>
@@ -54,12 +68,12 @@
         </div>
     </section>
     <!-- Rodapé -->
-    <footer>
+    <footer id="contato">
         <div class="Container">
-            
-        </div>        
+
+        </div>
     </footer>
-
-
+    <a href="#inicio" id="topo"><img src="img/topo.png" alt="topo do site"></a>
 </body>
+
 </html>
